--- a/manifest/app.yaml
+++ b/manifest/app.yaml
@@ -33,9 +33,9 @@ spec:
         image: maradwan/myapp:latest 
         ports:
         - containerPort: 8888
-        resources:
-          requests:
-            cpu: 200m
+        #resources:
+        #  requests:
+        #    cpu: 200m
 ---
 apiVersion: v1
 kind: Service
