--- a/manifest/app.yaml
+++ b/manifest/app.yaml
@@ -19,7 +19,7 @@ metadata:
   labels:
     app: myapp
 spec:
-  replicas: 9
+  replicas: 3
   selector:
     matchLabels:
       app: myapp
@@ -30,7 +30,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: maradwan/myapp:latest 
+        image: maradwan/myapp:v1 
         ports:
         - containerPort: 8888
         #resources:
