--- a/manifest/app.yaml
+++ b/manifest/app.yaml
@@ -41,6 +41,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
+  annotations:
+    Name: "TEST"
 spec:
   selector:
     app: myapp
