--- a/manifest/app.yaml
+++ b/manifest/app.yaml
@@ -42,7 +42,8 @@ kind: Service
 metadata:
   name: myapp-service
   annotations:
-    Name: "TEST"
+    #service.beta.kubernetes.io/aws-load-balancer-type: nlb
+    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "env=dev"
 spec:
   selector:
     app: myapp
