--- a/manifest/app.yaml
+++ b/manifest/app.yaml
@@ -18,6 +18,7 @@ metadata:
   name: myapp-deployment
   labels:
     app: myapp
+  namespace: kube-sysyem
 spec:
   replicas: 2
   selector:
@@ -41,6 +42,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
+  namespace: kube-sysyem
   annotations:
     #service.beta.kubernetes.io/aws-load-balancer-type: nlb
     service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "env=dev, Name=my-app, cost=2121"
