--- a/manifest/app.yaml
+++ b/manifest/app.yaml
@@ -5,7 +5,7 @@ metadata:
   name: myapp-deployment
   labels:
     app: myapp
-  namespace: kube-sysyem
+  namespace: kube-system
 spec:
   replicas: 2
   selector:
@@ -29,7 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
-  namespace: kube-sysyem
+  namespace: kube-system
   annotations:
     #service.beta.kubernetes.io/aws-load-balancer-type: nlb
     service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "env=dev, Name=my-app, cost=2121"
