--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -4,6 +4,12 @@ helm:
   chart: nginx-ingress-controller
   repo: https://charts.bitnami.com/bitnami
   version: 9.1.26
+  values:
+    annotations: {    
+        nginx.ingress.kubernetes.io/rewrite-target: /,
+        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
+    }
+
   
 targetCustomizations:
 - name: test
