--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -5,10 +5,12 @@ helm:
   repo: https://charts.bitnami.com/bitnami
   version: 9.1.26
   values:
-    annotations: {    
-        nginx.ingress.kubernetes.io/rewrite-target: /,
-        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "http"
-    }
+    metadata:
+      annotations: {    
+        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
+        service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+        service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      }
 
   
 targetCustomizations:
