--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -7,9 +7,9 @@ helm:
   values:
     metadata:
       annotations: {    
-        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-        service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
-        service.beta.kubernetes.io/aws-load-balancer-type: nlb
+        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp,
+        service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true",
+        service.beta.kubernetes.io/aws-load-balancer-type: nlb,
       }
 
   
