--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -5,13 +5,12 @@ helm:
   repo: https://charts.bitnami.com/bitnami
   version: 9.1.26
   values:
-    metadata:
-      annotations: {    
-        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp,
-        service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true",
-        service.beta.kubernetes.io/aws-load-balancer-type: nlb,
-      }
-
+    service:
+      annotations:    
+        service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
+        service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+        service.beta.kubernetes.io/aws-load-balancer-type: nlb
+      
   
 targetCustomizations:
 - name: test
