--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -6,23 +6,19 @@ helm:
   version: 9.1.26
   values:
     service:
-      annotations:    
+      targetPorts: {
+        name: https,
+          port: 443,
+          protocol: TCP,
+          targetPort: http
+      }
+      annotations: {
         service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
         service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
         service.beta.kubernetes.io/aws-load-balancer-type: nlb
         service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
         service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
-   
-      ports:                                                 
-      - name: http                             
-      port: 80                                                           
-      protocol: TCP                                                             
-      targetPort: http                                                                      
-      - name: https                                                                                                                                  
-      port: 443                                             
-      protocol: TCP                          
-      targetPort: http
-    
+      }    
   
 targetCustomizations:
 - name: test
