--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -12,13 +12,13 @@ helm:
           protocol: TCP,
           targetPort: http
       }
-      annotations: {
+      annotations: 
         service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
         service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
         service.beta.kubernetes.io/aws-load-balancer-type: nlb
         service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
         service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
-      }    
+          
   
 targetCustomizations:
 - name: test
