--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -6,13 +6,13 @@ helm:
   version: 9.1.26
   values:
     service:
-      targetPorts: {
+      ports: {
         name: https,
           port: 443,
           protocol: TCP,
           targetPort: http
       }
-      targetPorts: {
+      ports: {
         name: http,
           port: 80,
           protocol: TCP,
