--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -6,6 +6,9 @@ helm:
   version: 9.1.26
   values:
     service:    
+      labels: { 
+        app: yes
+      }
       annotations: 
         service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
         service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
