--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -17,14 +17,14 @@ targetCustomizations:
             protocol: TCP,
             targetPort: http
         }
-        annotations: {
+        annotations: 
           service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
           service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
           service.beta.kubernetes.io/aws-load-balancer-type: nlb
           service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
           service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
-        }
         
+       
   clusterSelector:
     matchLabels:
       env: test
