--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -7,8 +7,8 @@ helm:
   values:      
       service:
         targetPorts:
-          http: http
-          https: http
+          http: tcp
+          https: tcp
         annotations: 
           service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
           service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
