--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -9,12 +9,10 @@ helm:
         targetPorts:
           http: http
           https: http
-        annotations: 
-          service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-west-1:117698054570:certificate/050b46d3-2979-4aae-8d41-de9fd091a023"
-          service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
-          service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-          service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "TLS"
-          service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+        annotations:
+          service.beta.kubernetes.io/aws-load-balancer-type: external
+          service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+          service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+          service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:117698054570:certificate/050b46d3-2979-4aae-8d41-de9fd091a023
+          service.beta.kubernetes.io/aws-load-balancer-ssl-port: "443"
           service.beta.kubernetes.io/aws-load-balancer-type: nlb
-          service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "60"
-          service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "TLS"
