--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -11,5 +11,6 @@ helm:
         annotations:
           service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
           service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:117698054570:certificate/050b46d3-2979-4aae-8d41-de9fd091a023
-          service.beta.kubernetes.io/aws-load-balancer-ssl-port: "443"
+          service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
+
           #service.beta.kubernetes.io/aws-load-balancer-type: nlb
