--- a/fleet/clusterissuer/prodValues/letsencrypt-staging.yaml
+++ b/fleet/clusterissuer/prodValues/letsencrypt-staging.yaml
@@ -1,16 +1,13 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-prod
-  namespace: cert-manager
-  labels:
-    name: letsencrypt-prod
+  name: letsencrypt-staging
 spec:
   acme:
     email: mohamed@gozeit.com
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
-      name: letsencrypt-prod
-    server: https://acme-v02.api.letsencrypt.org/directory
+      name: letsencrypt-staging
     solvers:
     - http01:
         ingress:
