--- a/fleet/grafana/fleet.yaml
+++ b/fleet/grafana/fleet.yaml
@@ -25,3 +25,9 @@ targetCustomizations:
             - hosts:
               - grafana.apps.gozeit.com
               secretName: grafana-certmanager-tls-secret
+
+
+  clusterSelector:
+    matchLabels:
+      env: prod
+
