--- a/fleet/grafana/fleet.yaml
+++ b/fleet/grafana/fleet.yaml
@@ -9,6 +9,7 @@ helm:
       enabled: true
       ingressClassName: nginx
       tls: true
+      hostname: grafana.apps.gozeit.com
 
 targetCustomizations:
 - name: prod
