--- a/fleet/grafana/fleet.yaml
+++ b/fleet/grafana/fleet.yaml
@@ -6,14 +6,14 @@ helm:
   version: 7.9.8 
   values:
     ingress:
-      annotations:
-        kubernetes.io/tls-acme: "true"
-        cert-manager.io/cluster-issuer: letsencrypt-prod
       enabled: true
-      ingressClassName: nginx
-      tls: true
-      hostname: grafana.apps.gozeit.com
-      hosts: 
+      annotations:
+        kubernetes.io/ingress.class: nginx
+        cert-manager.io/cluster-issuer: "letsencrypt-prod"
+      hosts:
         - grafana.apps.gozeit.com
-
-      
+        
+      tls:
+        - hosts: 
+            - grafana.apps.gozeit.com
+          secretName: grafana-tls
