--- a/fleet/grafana/fleet.yaml
+++ b/fleet/grafana/fleet.yaml
@@ -8,6 +8,7 @@ helm:
     ingress:
       tls: true
       enabled: true
+      ingressClassName: nginx
       annotations:
         kubernetes.io/ingress.class: nginx
         cert-manager.io/cluster-issuer: "letsencrypt-prod"
