--- a/fleet/vault/fleet.yaml
+++ b/fleet/vault/fleet.yaml
@@ -14,6 +14,7 @@ helm:
         activeService: false
       ha:
         enabled: true
+        replicas: 2
         raft:
           enabled: true
 
