--- a/fleet/secrets/prodValues/prod/externalsecrets.yaml
+++ b/fleet/secrets/prodValues/prod/externalsecrets.yaml
@@ -5,23 +5,16 @@ metadata:
   name: demo-app
   namespace: demo
 spec:
-  data:
-  - remoteRef:
+  dataFrom:
+  - extract:
       conversionStrategy: Default
       decodingStrategy: None
       key: demo-app
-    secretKey: regcred
   refreshInterval: 15s
   secretStoreRef:
     kind: SecretStore
-    name: vault-demo
+    name: vault-demo-app
   target:
     creationPolicy: Owner
     deletionPolicy: Retain
     name: demo-app
-    template:
-      data:
-        .dockerconfigjson: '{{ .regcred | toString }}'
-      engineVersion: v2
-      type: kubernetes.io/dockerconfigjson
-
