--- a/fleet/secrets/prodValues/prod/externalsecrets.yaml
+++ b/fleet/secrets/prodValues/prod/externalsecrets.yaml
@@ -13,7 +13,7 @@ spec:
   refreshInterval: 15s
   secretStoreRef:
     kind: SecretStore
-    name: vault-demo-app
+    name: vault-demo
   target:
     creationPolicy: Owner
     deletionPolicy: Retain
