--- a/fleet/secrets/prodValues/prod/secretstore.yaml
+++ b/fleet/secrets/prodValues/prod/secretstore.yaml
@@ -12,6 +12,6 @@ spec:
           role: demo-app-role
           serviceAccountRef:
             name: vault-demo
-      path: demo-app
+      path: secret
       server: http://apps-fleet-vault.vault.svc.cluster.local:8200
       version: v2
