--- a/fleet/app-vault/app.yaml
+++ b/fleet/app-vault/app.yaml
@@ -20,11 +20,11 @@ spec:
         vault.hashicorp.com/role: 'demo-app-role'
         vault.hashicorp.com/agent-inject-secret-sb: 'backend/demo-app'
         # Environment export 
-        #vault.hashicorp.com/agent-inject-template-sb: |
-        #  {{ with secret "backend/demo-app" -}}
-        #    export USERNAME="{{ .Data.data.username }}"
-        #    export PASSWORD="{{ .Data.data.password }}"
-        #  {{- end }}
+        vault.hashicorp.com/agent-inject-template-sb: |
+          {{ with secret "backend/demo-app" -}}
+            export USERNAME="{{ .Data.data.username }}"
+            export PASSWORD="{{ .Data.data.password }}"
+          {{- end }}
 
     spec:
       serviceAccountName: vault-demo
