--- a/fleet/app-vault/app.yaml
+++ b/fleet/app-vault/app.yaml
@@ -20,10 +20,10 @@ spec:
         vault.hashicorp.com/role: 'demo-app-role'
         vault.hashicorp.com/agent-inject-secret-sb: 'backend/demo-app'
         # Environment export        
-        vault.hashicorp.com/agent-inject-template-config: |
+        vault.hashicorp.com/agent-inject-template-sb: |
           {{ with secret "backend/demo-app" -}}
-            export USERNAME="{{ .Data.data.username }}"
-            export PASSWORD="{{ .Data.data.password }}"
+             USERNAME="{{ .Data.data.username }}"
+             PASSWORD="{{ .Data.data.password }}"
           {{- end }}
 
     spec:
