--- a/budibase/fleet.yaml
+++ b/budibase/fleet.yaml
@@ -14,13 +14,13 @@ helm:
         storageClass: "gp2"
     services:
       proxy:
-        port: 10000
+        #port: 10000
         replicaCount: 1
       apps:
-        port: 4002
-        replicaCount: 1
+        #port: 4002
+        replicaCount: 2
       worker:
-        port: 4001
+        #port: 4001
         replicaCount: 1
     ingress:
       enabled: true
