--- a/fleet/secrets/prodValues/prod/secretstore.yaml
+++ b/fleet/secrets/prodValues/prod/secretstore.yaml
@@ -15,3 +15,21 @@ spec:
       path: backend
       server: http://apps-fleet-vault.vault.svc.cluster.local:8200
       version: v2
+---
+apiVersion: external-secrets.io/v1beta1
+kind: SecretStore
+metadata:
+  name: aws-vault
+  namespace: crossplane-system
+spec:
+  provider:
+    vault:
+      auth:
+        kubernetes:
+          mountPath: kubernetes
+          role: aws-vault-role
+          serviceAccountRef:
+            name: aws-vault
+      path: aws
+      server: http://apps-fleet-vault.vault.svc.cluster.local:8200
+      version: v2
