--- a/fleet/secrets/prodValues/prod/externalsecrets.yaml
+++ b/fleet/secrets/prodValues/prod/externalsecrets.yaml
@@ -18,3 +18,24 @@ spec:
     creationPolicy: Owner
     deletionPolicy: Retain
     name: demo-app
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  generation: 1
+  name: aws-crossplane
+  namespace: crossplane-system
+spec:
+  dataFrom:
+  - extract:
+      conversionStrategy: Default
+      decodingStrategy: None
+      key: aws-crossplane
+  refreshInterval: 15s
+  secretStoreRef:
+    kind: SecretStore
+    name: aws-vault
+  target:
+    creationPolicy: Owner
+    deletionPolicy: Retain
+    name: aws-crossplane
