--- a/fleet/secrets/prodValues/prod/secretstore.yaml
+++ b/fleet/secrets/prodValues/prod/secretstore.yaml
@@ -30,6 +30,6 @@ spec:
           role: aws-vault-role
           serviceAccountRef:
             name: aws-vault
-      path: aws
+      path: aws-keys
       server: http://apps-fleet-vault.vault.svc.cluster.local:8200
       version: v2
