--- a/fleet/secrets/prodValues/prod/externalsecrets.yaml
+++ b/fleet/secrets/prodValues/prod/externalsecrets.yaml
@@ -37,5 +37,5 @@ spec:
     name: aws-vault
   target:
     creationPolicy: Owner
-    deletionPolicy: Delete
+    deletionPolicy: Retain
     name: aws-crossplane
