--- a/crossplane/bucket.yaml
+++ b/crossplane/bucket.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   providerConfigRef:
-    name: crossplane-provider-aws
+    name: default
   forProvider:
     locationConstraint: eu-central-1
     acl: private
