--- a/crossplane/route-table.yaml
+++ b/crossplane/route-table.yaml
@@ -12,8 +12,7 @@ spec:
 
 --- 
 
-
-apiVersion: ec2.aws.crossplane.io/v1alpha4
+apiVersion: ec2.aws.crossplane.io/v1beta1
 kind: RouteTable
 metadata:
   name: production-routetable
