--- a/crossplane/mysql-client-pod.yaml
+++ b/crossplane/mysql-client-pod.yaml
@@ -7,10 +7,10 @@ spec:
   containers:
   - name: mysqlconn
     image: mysql:latest
-    #command: ['sh']
-    command: [ "/bin/bash", "-c", "--" ]  
-    #args: ['-c', 'show databases;']
-    args: [ "while true; do sleep 30; done;" ]
+    command: ['mysql']
+    #command: [ "/bin/bash", "-c", "--" ]
+    args: [ '-u', '$MYSQL_USER', '-p$MYSQL_PASSWORD' -h '$MYSQL_HOST', '-c', 'show databases;']
+    #args: [ "while true; do sleep 30; done;" ]
     env:
     - name: MYSQL_HOST
       valueFrom:
