--- a/crossplane/mysql-client-pod.yaml
+++ b/crossplane/mysql-client-pod.yaml
@@ -9,7 +9,7 @@ spec:
     image: mysql:latest
     command: ['mysql']
     #command: [ "/bin/bash", "-c", "--" ]
-    args: [ '-u', '$MYSQL_USER', '-p$MYSQL_PASSWORD' -h '$MYSQL_HOST', '-c', 'show databases;']
+    args: [ '-u', '$MYSQL_USER', '-p$MYSQL_PASSWORD', '-h', '$MYSQL_HOST', '-c', 'show databases;']
     #args: [ "while true; do sleep 30; done;" ]
     env:
     - name: MYSQL_HOST
