--- a/crossplane/mysql-client-pod.yaml
+++ b/crossplane/mysql-client-pod.yaml
@@ -7,9 +7,9 @@ spec:
   containers:
   - name: mysqlconn
     image: mysql:latest
-    command: ['mysql']
-    #command: [ "/bin/bash", "-c", "--" ]
-    args: [ "-u $MYSQL_USER -p$MYSQL_PASSWORD -h $MYSQL_HOST -e 'show databases'" ]
+    #command: ['mysql']
+    command: [ "/bin/bash", "-c", "--" ]
+    args: [ "mysql -u $MYSQL_USER -p$MYSQL_PASSWORD -h $MYSQL_HOST -e 'show databases'" ]
     #args: [ "while true; do sleep 30; done;" ]
     env:
     - name: MYSQL_HOST
