--- a/crossplane/mysql-client-pod.yaml
+++ b/crossplane/mysql-client-pod.yaml
@@ -7,8 +7,12 @@ spec:
   containers:
   - name: mysqlconn
     image: mysql:latest
-    command: ['mysql']
-    args: ['-c', 'show databases;']
+    command: [ "sh", "-c"]
+    args:
+      - while true; do
+          mysql -u $MYSQL_USER -p$MYSQL_PASSWORD -h $MYSQL_HOST -e 'show databases';
+          sleep 10;
+      done;
     env:
     - name: MYSQL_HOST
       valueFrom:
@@ -21,16 +25,6 @@ spec:
           name: production-rds-conn-string
           key: password
     - name: MYSQL_USER
-      valueFrom:
-        secretKeyRef:
-          name: production-rds-conn-string
-          key: username
-    - name: MYSQL_ROOT_PASSWORD
-      valueFrom:
-        secretKeyRef:
-          name: production-rds-conn-string
-          key: password
-    - name: MYSQL_ROOT_USER
       valueFrom:
         secretKeyRef:
           name: production-rds-conn-string
