--- a/fleet/secrets/fleet.yaml
+++ b/fleet/secrets/fleet.yaml
@@ -3,7 +3,7 @@ defaultNamespace: default
 targetCustomizations:
 - name: prod
   yaml:
-    prodValues:
+    Values:
       - prod
   clusterSelector:
     matchLabels:
