--- a/fleet/secrets/fleet.yaml
+++ b/fleet/secrets/fleet.yaml
@@ -1,6 +1,15 @@
 defaultNamespace: default
 
 targetCustomizations:
+
+- name: dev
+  yaml:
+    Values:
+      - dev
+  clusterSelector:
+    matchLabels:
+      env: dev
+      
 - name: prod
   yaml:
     Values:
@@ -8,4 +17,3 @@ targetCustomizations:
   clusterSelector:
     matchLabels:
       env: prod
-
