--- a/fleet/secrets/fleet.yaml
+++ b/fleet/secrets/fleet.yaml
@@ -4,16 +4,16 @@ targetCustomizations:
 
 - name: dev
   yaml:
-    Values:
-      - dev
+    overlays:
+    - dev
   clusterSelector:
     matchLabels:
       env: dev
       
 - name: prod
   yaml:
-    Values:
-      - prod
+    overlays:
+    - prod
   clusterSelector:
     matchLabels:
       env: prod
