--- a/fleet/secrets/fleet.yaml
+++ b/fleet/secrets/fleet.yaml
@@ -4,7 +4,7 @@ targetCustomizations:
 
 - name: dev
   yaml:
-    Values:
+    overlays:
     - dev
   clusterSelector:
     matchLabels:
@@ -12,7 +12,7 @@ targetCustomizations:
       
 - name: prod
   yaml:
-    Values:
+    overlays:
     - prod
   clusterSelector:
     matchLabels:
