--- a/fleet/app-vault/app.yaml
+++ b/fleet/app-vault/app.yaml
@@ -1,4 +1,15 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: demo
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: vault-demo
+  namespace: demo
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
