--- a/fleet/app-vault/app.yaml
+++ b/fleet/app-vault/app.yaml
@@ -1,8 +1,10 @@
 ---
-apiVersion: v1
 kind: Namespace
+apiVersion: v1
 metadata:
   name: demo
+  labels:
+    name: demo
 ---
 apiVersion: v1
 kind: ServiceAccount
