--- a/nginx-ingress-controller/fleet.yaml
+++ b/nginx-ingress-controller/fleet.yaml
@@ -12,8 +12,8 @@ helm:
           service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
           service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-west-1:117698054570:certificate/050b46d3-2979-4aae-8d41-de9fd091a023
           service.beta.kubernetes.io/aws-load-balancer-ssl-ports: https
-          service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
+          service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
           service.beta.kubernetes.io/aws-load-balancer-type: nlb
-          #service.beta.kubernetes.io/aws-load-balancer-access-log-enabled: true
-          #service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-name: logs
-          #service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-prefix: ELB/test
+          #service.beta.kubernetes.io/aws-load-balancer-access-log-enabled: "true"
+          #service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-name: "logs"
+          #service.beta.kubernetes.io/aws-load-balancer-access-log-s3-bucket-prefix: "ELB/test"
